--- a/packages/pentatrion-design/components/autocomplete/Autocomplete.scss
+++ b/packages/pentatrion-design/components/autocomplete/Autocomplete.scss
@@ -10,9 +10,23 @@
             height: 48px;
             padding: 0;
 
-            .icon {
+            .prefix {
                 width: 48px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .icon {
+                flex: 1;
                 font-size: 1.25rem;
+            }
+
+            .type {
+                text-align: center;
+                height: 18px;
+                line-height: 10px;
+                color: var(--text-hint);
+                font-size: var(--font-size-xs);
             }
 
             .content {
@@ -29,16 +43,7 @@
                 font-size: var(--font-size-sm);
             }
 
-            .type {
-                height: 48px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: var(--text-hint);
-                font-size: var(--font-size-sm);
-                padding: .5rem;
-                font-style: italic;
-            }
+
         }
     }
 }
