--- a/packages/pentatrion-design/components/input/Input.scss
+++ b/packages/pentatrion-design/components/input/Input.scss
@@ -40,6 +40,7 @@
         filter: none; // Firefox autofill color
         border: 0;
         background: none;
+        width: 0;
     }
 
     .adornment {
