ll-marker add target

--- a/packages/pentatrion-design/styles/themes/_light.scss
+++ b/packages/pentatrion-design/styles/themes/_light.scss
@@ -103,6 +103,18 @@
     --color-weak-text: var(--text-default);
     --color-weak-text-invert: var(--text-default);
 
+    --color-grey-50: #ededed;
+    --color-grey-100: #dedede;
+    --color-grey-200: #bababa;
+    --color-grey-300: #999999;
+    --color-grey-400: #757575;
+    --color-grey-500: #545454;
+    --color-grey-600: #424242;
+    --color-grey-700: #333333;
+    --color-grey-800: #212121;
+    --color-grey-900: #121212;
+    --color-grey-950: #080808;
+
     --scrollbar-thumb-color: rgb(0 0 0 / 0.35);
     --scrollbar-thumb-hover-color: rgb(0 0 0 / 0.5);
 }
