--- a/packages/maplibre-components/src/LLMarker.scss
+++ b/packages/maplibre-components/src/LLMarker.scss
@@ -4,6 +4,7 @@
     --marker-width: calc(var(--marker-size) * 0.7);
 
     --marker-color: var(--color-primary-500);
+
     --marker-color-selected: color-mix(in srgb, var(--marker-color), black 10%);
     --marker-color-hover: color-mix(in srgb, var(--marker-color), black 10%);
     --ovale-color-hover: color-mix(in srgb, var(--marker-color), white 50%);
@@ -18,7 +19,7 @@
     left: 0;
 
     &,
-    &>* {
+    &>:first-child {
         width: var(--marker-width);
         height: var(--marker-height);
 
@@ -34,17 +35,42 @@
     //     margin-top: -2px;
     // }
 
-    &>* {
-        transition: transform 0.1s ease;
+    &>:first-child {
+        transition: transform 0.2s ease;
     }
 
-    &:active>*,
-    &.active>* {
-        animation: marker-active .3s linear 1;
+
+    .target {
+        width: calc(var(--marker-width) * .2);
+        height: calc(var(--marker-width) * .1);
+        background-color: var(--color-grey-600);
+        position: absolute;
+        left: calc(50% - var(--marker-width) * .1);
+        top: calc(100% - var(--marker-width) * .05);
+        border-radius: 50%;
         transition: transform 0.3s ease;
+
+        opacity: 0;
+        transform: scale(.5);
+
+
+
+        transition: transform 0.2s ease, opacity .2s ease;
+
+        box-shadow: 0px 0px 2px #000;
     }
 
+    &:active,
+    &.active {
+        &>:first-child {
+            transform: translateY(-5px);
+        }
 
+        .target {
+            opacity: .5;
+            transform: scale(1);
+        }
+    }
 
     // &>*,
     // /* overwrite MarkerCluster.Default.css */
@@ -58,14 +84,14 @@
 
 
 
-    &>*::before,
-    &>*::after {
+    &>:first-child::before,
+    &>:first-child::after {
         position: absolute;
         top: 0;
     }
 
     /* shadow */
-    &>*::before {
+    &>:first-child::before {
         left: 50%;
         transform: translateX(-50%);
 
@@ -78,7 +104,7 @@
     }
 
     /* marker */
-    &>*::after {
+    &>:first-child::after {
         /* fe-marker */
         left: 0;
         content: '\e81c';
@@ -90,7 +116,7 @@
 
 
     /* fontello default */
-    &>*::after,
+    &>:first-child::after,
     .inactive,
     i::before {
         font-family: "fontello", sans-serif;
@@ -203,7 +229,7 @@
         user-select: none;
 
         /* marker */
-        &>*::after {
+        &>:first-child::after {
             /* fe-marker */
             content: '\e81c';
             color: var(--color-weak-200);
