--- a/apps/maplibre-react-sandbox/src/own-11-streetview-vanilla/main.scss
+++ b/apps/maplibre-react-sandbox/src/own-11-streetview-vanilla/main.scss
@@ -1,7 +1,3 @@
-html {
-    --sidebar-extra-height: 200px;
-}
-
 html,
 body,
 #root,
@@ -25,22 +21,7 @@ body,
     border-radius: 4px;
 }
 
-#root {
-    display: flex;
-    flex-direction: column;
-}
-
-.map-container {
-    flex: 1;
-}
-
-.context-row {
-    border-top: 1px solid #555;
-    flex: 0 0 var(--sidebar-extra-height);
-    position: relative;
-}
-
-#extra-content {
-    width: 100%;
-    height: 100%;
+.map {
+    width: 600px;
+    height: 400px;
 }
