--- a/packages/pentatrion-design/components/resize-area/ResizeArea.scss
+++ b/packages/pentatrion-design/components/resize-area/ResizeArea.scss
@@ -79,6 +79,19 @@
         }
     }
 
+    &.bottom {
+        top: auto;
+
+        .area-button {
+            bottom: calc(-1 * var(--grip-size) / 2);
+
+            &::before {
+                bottom: calc(50% - var(--indicator-size) / 2);
+            }
+
+        }
+    }
+
     &.right {
         left: auto;
 
@@ -87,6 +100,19 @@
 
             &::before {
                 right: calc(50% - var(--indicator-size) / 2);
+            }
+
+        }
+    }
+
+    &.left {
+        right: auto;
+
+        .area-button {
+            left: calc(-1 * var(--grip-size) / 2);
+
+            &::before {
+                left: calc(50% - var(--indicator-size) / 2);
             }
 
         }
