--- a/apps/storybook/.storybook/storybook.scss
+++ b/apps/storybook/.storybook/storybook.scss
@@ -66,3 +66,9 @@
     align-items: center;
     justify-content: center;
 }
+
+.storybook-map-bg {
+    background-image: url("/bg-map.jpg");
+    background-size: cover;
+    padding: 2rem;
+}
