--- a/packages/pentatrion-design/components/button/ButtonGroup.scss
+++ b/packages/pentatrion-design/components/button/ButtonGroup.scss
@@ -1,12 +1,29 @@
 .ll-button-group {
-    :not(:first-child) {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
+    &.direction-horizontal {
+        :not(:first-child) {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        :not(:last-child) {
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
     }
 
-    :not(:last-child) {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
+    &.direction-vertical {
+        display: flex;
+        flex-direction: column;
+
+        :not(:first-child) {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+
+        :not(:last-child) {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+        }
     }
 
     .ll-button {
