--- a/packages/pentatrion-design/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-design/components/layer-switcher/LayerSwitcher.scss
@@ -3,6 +3,24 @@
     overflow-x: auto;
     pointer-events: all;
 
+    .separator {
+        width: 0;
+        flex: 0 0 .25rem;
+        margin: 1rem .5rem;
+        background-color: var(--background-default);
+        border-radius: 3px;
+
+    }
+
+    .filters {
+        margin: .25rem;
+
+        .ll-button {
+            padding: .25rem .5rem;
+            flex: 1;
+        }
+    }
+
     .layer {
         width: 0;
         flex: 1 0 80px;
@@ -15,12 +33,38 @@
         margin: .25rem;
         background-color: var(--background-default);
         position: relative;
+        cursor: pointer;
+        transition: .3s background-color ease;
 
-        &:hover,
-        &.active {
-            cursor: pointer;
-            background-color: var(--color-primary);
+
+        &.base {
+            &:hover {
+                background-color: var(--color-primary);
+            }
+
+            &.active {
+                background-color: var(--color-primary);
+
+                &:hover {
+                    background-color: var(--color-primary-700);
+                }
+            }
         }
+
+        &.optional {
+            &:hover {
+                background-color: var(--color-primary-200);
+            }
+
+            &.active {
+                background-color: var(--color-primary-200);
+
+                &:hover {
+                    background-color: var(--color-primary-500);
+                }
+            }
+        }
+
     }
 
     .type {
