--- a/packages/pentatrion-fonts/lonlat-fontello.css
+++ b/packages/pentatrion-fonts/lonlat-fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello/fontello.eot?54764576');
-  src: url('./dist/fontello/fontello.eot?54764576#iefix') format('embedded-opentype'),
-       url('./dist/fontello/fontello.woff2?54764576') format('woff2'),
-       url('./dist/fontello/fontello.woff?54764576') format('woff'),
-       url('./dist/fontello/fontello.ttf?54764576') format('truetype'),
-       url('./dist/fontello/fontello.svg?54764576#fontello') format('svg');
+  src: url('./dist/fontello/fontello.eot?63493357');
+  src: url('./dist/fontello/fontello.eot?63493357#iefix') format('embedded-opentype'),
+       url('./dist/fontello/fontello.woff2?63493357') format('woff2'),
+       url('./dist/fontello/fontello.woff?63493357') format('woff'),
+       url('./dist/fontello/fontello.ttf?63493357') format('truetype'),
+       url('./dist/fontello/fontello.svg?63493357#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello/fontello.svg?54764576#fontello') format('svg');
+    src: url('./dist/fontello/fontello.svg?63493357#fontello') format('svg');
   }
 }
 */
@@ -87,6 +87,7 @@
 .fe-inactive:before { content: '\e81f'; } /* '' */
 .fe-municipality:before { content: '\e820'; } /* '' */
 .fe-street:before { content: '\e821'; } /* '' */
+.fe-plus-circled:before { content: '\e822'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
 .fe-history:before { content: '\f1da'; } /* '' */
