--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello/fontello.eot?63493357');
-  src: url('./dist/fontello/fontello.eot?63493357#iefix') format('embedded-opentype'),
-       url('./dist/fontello/fontello.woff2?63493357') format('woff2'),
-       url('./dist/fontello/fontello.woff?63493357') format('woff'),
-       url('./dist/fontello/fontello.ttf?63493357') format('truetype'),
-       url('./dist/fontello/fontello.svg?63493357#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?62925257');
+  src: url('./dist/fontello-lonlat/fontello.eot?62925257#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?62925257') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?62925257') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?62925257') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?62925257#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello/fontello.svg?63493357#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?62925257#fontello') format('svg');
   }
 }
 */
@@ -78,13 +78,8 @@
 .fe-angle-left:before { content: '\e816'; } /* '' */
 .fe-angle-right:before { content: '\e817'; } /* '' */
 .fe-circle-exclamation:before { content: '\e818'; } /* '' */
-.fe-circle-disabled:before { content: '\e819'; } /* '' */
-.fe-circle-fill:before { content: '\e81a'; } /* '' */
-.fe-circle-stroke:before { content: '\e81b'; } /* '' */
-.fe-marker:before { content: '\e81c'; } /* '' */
 .fe-braille:before { content: '\e81d'; } /* '' */
 .fe-locality:before { content: '\e81e'; } /* '' */
-.fe-inactive:before { content: '\e81f'; } /* '' */
 .fe-municipality:before { content: '\e820'; } /* '' */
 .fe-street:before { content: '\e821'; } /* '' */
 .fe-plus-circled:before { content: '\e822'; } /* '' */
