Refactor FeatureOption to GeoOption

--- a/apps/maplibre-react-sandbox/src/custom-04-direction/App.scss
+++ b/apps/maplibre-react-sandbox/src/custom-04-direction/App.scss
@@ -24,3 +24,11 @@ body,
         pointer-events: all;
     }
 }
+
+.maplibregl-map .maplibregl-canvas-container.maplibregl-interactive {
+    cursor: pointer;
+}
+
+.maplibregl-map .maplibregl-canvas-container.maplibregl-interactive:active {
+    cursor: grabbing;
+}
