--- a/packages/pentatrion-design/components/steps/Steps.scss
+++ b/packages/pentatrion-design/components/steps/Steps.scss
@@ -193,6 +193,10 @@
         }
     }
 
+    .ll-autocomplete {
+        flex: 1;
+    }
+
     .title {
         font-size: var(--font-size-rg);
     }
