--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?62925257');
-  src: url('./dist/fontello-lonlat/fontello.eot?62925257#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?62925257') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?62925257') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?62925257') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?62925257#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?86469279');
+  src: url('./dist/fontello-lonlat/fontello.eot?86469279#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?86469279') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?86469279') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?86469279') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?86469279#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?62925257#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?86469279#fontello') format('svg');
   }
 }
 */
@@ -75,6 +75,7 @@
 .fe-route:before { content: '\e812'; } /* '' */
 .fe-street-1:before { content: '\e813'; } /* '' */
 .fe-summit:before { content: '\e814'; } /* '' */
+.fe-marker:before { content: '\e815'; } /* '' */
 .fe-angle-left:before { content: '\e816'; } /* '' */
 .fe-angle-right:before { content: '\e817'; } /* '' */
 .fe-circle-exclamation:before { content: '\e818'; } /* '' */
