Steps UI enhancement

--- a/apps/storybook/.storybook/storybook.scss
+++ b/apps/storybook/.storybook/storybook.scss
@@ -72,3 +72,10 @@
     background-size: cover;
     padding: 2rem;
 }
+
+.storybook-result {
+    margin: 1rem;
+    padding: 1rem;
+    font-size: .9rem;
+    color: var(--text-hint);
+}
