--- a/packages/pentatrion-design/components/button/ButtonGroup.scss
+++ b/packages/pentatrion-design/components/button/ButtonGroup.scss
@@ -27,7 +27,7 @@
     }
 
     .ll-button {
-        &.shape-solid {
+        &.variant-solid {
             box-shadow: none;
 
             &:hover {
