--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?86469279');
-  src: url('./dist/fontello-lonlat/fontello.eot?86469279#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?86469279') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?86469279') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?86469279') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?86469279#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?37871966');
+  src: url('./dist/fontello-lonlat/fontello.eot?37871966#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?37871966') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?37871966') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?37871966') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?37871966#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?86469279#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?37871966#fontello') format('svg');
   }
 }
 */
@@ -79,6 +79,7 @@
 .fe-angle-left:before { content: '\e816'; } /* '' */
 .fe-angle-right:before { content: '\e817'; } /* '' */
 .fe-circle-exclamation:before { content: '\e818'; } /* '' */
+.fe-plus:before { content: '\e819'; } /* '' */
 .fe-braille:before { content: '\e81d'; } /* '' */
 .fe-locality:before { content: '\e81e'; } /* '' */
 .fe-municipality:before { content: '\e820'; } /* '' */
