--- a/packages/pentatrion-design/styles/vars/_index.scss
+++ b/packages/pentatrion-design/styles/vars/_index.scss
@@ -3,3 +3,11 @@
 @import "./text";
 @import "./variants";
 @import "./rings";
+
+
+:root {
+    --zindex-overlay: 100;
+
+    --zindex-tooltip: 100;
+    --zindex-context-menu: 90;
+}
