--- a/packages/pentatrion-design/components/context-menu/ContextMenu.scss
+++ b/packages/pentatrion-design/components/context-menu/ContextMenu.scss
@@ -1,37 +1,3 @@
-.context-menu {
-    outline: 0;
-    background: white;
-    border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 4px;
-    border-radius: 8px;
-}
-
-.menu-item {
-    width: 100%;
-    display: block;
-}
-
-.menu-item {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    text-align: left;
-    line-height: 1.5;
-    margin: 0;
-    outline: 0;
-}
-
-.menu-item.open {
-    background: #ddd;
-}
-
-.menu-item:focus,
-.menu-item:not([disabled]):active {
-    background: royalblue;
-    color: white;
+.ll-context-menu {
+    z-index: var(--zindex-context-menu);
 }
