--- a/packages/pentatrion-design/components/modal/Modal.scss
+++ b/packages/pentatrion-design/components/modal/Modal.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(40, 40, 40, .2);
+    z-index: var(--zindex-overlay);
 }
 
 .ll-modal {
