--- a/packages/pentatrion-design/components/notification/Notification.scss
+++ b/packages/pentatrion-design/components/notification/Notification.scss
@@ -2,6 +2,7 @@
     .box {
         pointer-events: all;
         width: fit-content;
+        min-width: 250px;
         padding: 0 0 0 1rem;
         height: 2.5rem;
         display: flex;
@@ -10,6 +11,7 @@
 
     .message {
         padding: 0 1rem 0 0;
+        flex: 1;
     }
 
     .ll-button {
