--- a/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
@@ -36,7 +36,7 @@
         display: flex;
         flex-direction: column;
         box-shadow: var(--shadow);
-        padding: 5px 5px 0;
+        padding: .25rem .25rem 0;
         margin: .25rem;
         background-color: var(--background-default);
         position: relative;
