--- a/apps/front/src/css/index.scss
+++ b/apps/front/src/css/index.scss
@@ -1,6 +1,7 @@
 @import "./maplibre-base.scss";
 
 @import "./ctrl/layout";
+@import "./ctrl/tabs";
 @import "./ctrl/components";
 @import "./ctrl/attrib.scss";
 
