--- a/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
@@ -5,22 +5,21 @@
     position: relative;
     z-index: 1;
     user-select: none;
-
-    &>* {
-        pointer-events: all;
-    }
+    width: fit-content;
+    max-width: 100%;
+    pointer-events: auto;
+    gap: .5rem;
+    padding: 0 .5rem .5rem .5rem;
 
     .separator {
-        width: 0;
+        width: .25rem;
         flex: 0 0 .25rem;
-        margin: 1rem .5rem;
+        margin: 1rem 0;
         background-color: var(--background-default);
         border-radius: 3px;
-
     }
 
     .filters {
-        margin: .25rem;
 
         .ll-button {
             padding: .25rem .5rem;
@@ -29,14 +28,13 @@
     }
 
     .layer {
-        width: 0;
+        width: calc(90px + .5rem);
         flex: 0 0 calc(90px + .5rem);
         border-radius: var(--border-radius-sm);
         display: flex;
         flex-direction: column;
         box-shadow: var(--shadow);
         padding: .25rem .25rem 0;
-        margin: .25rem;
         background-color: var(--background-default);
         position: relative;
         cursor: pointer;
