front searchTab improvements

--- a/packages/pentatrion-design/components/button/Button.scss
+++ b/packages/pentatrion-design/components/button/Button.scss
@@ -46,6 +46,9 @@
                 box-shadow: none;
             }
         }
+    }
+
+    &:not(.variant-underline, .variant-ghost) {
 
         &:active,
         &.selected {
