--- a/packages/pentatrion-design/components/snack/Snack.scss
+++ b/packages/pentatrion-design/components/snack/Snack.scss
@@ -29,6 +29,7 @@
     left: 0;
     right: 0;
     pointer-events: none;
+    z-index: var(--zindex-notification);
 
     .snack-bar-inner {
         margin-bottom: 1rem;
