--- a/packages/pentatrion-design/styles/themes/_light.scss
+++ b/packages/pentatrion-design/styles/themes/_light.scss
@@ -89,6 +89,7 @@
     --color-danger-text: var(--color-danger-700);
     --color-danger-text-invert: var(--text-invert);
 
+    --color-weak-50: #f2f2f2;
     --color-weak-100: #e4e4e4;
     --color-weak-200: #dcdcdc;
     --color-weak-300: #d4d4d4;
