--- a/packages/pentatrion-design/components/input/Input.scss
+++ b/packages/pentatrion-design/components/input/Input.scss
@@ -1,4 +1,5 @@
 .ll-input,
+.ll-textarea,
 .ll-select .selection {
     border-radius: var(--border-radius-md);
     transition: all .3s ease;
@@ -31,6 +32,16 @@
         color: var(--text-weak, inherit);
         opacity: .5;
     }
+}
+
+.ll-textarea {
+    &:read-only {
+        background-color: var(--background-light);
+    }
+}
+
+.ll-input,
+.ll-select .selection {
 
     .input-element {
         padding: .5rem .5rem;
@@ -41,6 +52,10 @@
         border: 0;
         background: none;
         width: 0;
+    }
+
+    .adornment+.input-element {
+        padding-left: 0;
     }
 
     .adornment {
