--- a/packages/pentatrion-design/styles/vars/variants.scss
+++ b/packages/pentatrion-design/styles/vars/variants.scss
@@ -27,6 +27,19 @@
         --button-focus-visible-border-color: var(--color-#{$colorType}-900);
     }
 
+    .variant-light-#{$colorType} {
+        $light-text-color: var(--color-#{$colorType}-text);
+
+        --button-default-background-color: var(--color-#{$colorType}-50);
+        --button-hover-background-color: var(--color-#{$colorType}-200);
+        --button-active-background-color: var(--color-#{$colorType}-500);
+        --button-default-text-color: #{$light-text-color};
+        --button-hover-text-color: #{$light-text-color};
+        --button-active-text-color: #{$light-text-color};
+        --button-focus-border-color: transparent;
+        --button-focus-visible-border-color: var(--color-#{$colorType}-900);
+    }
+
     .variant-ghost-#{$colorType} {
         $ghost-text-color: var(--text-hint);
 
