--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?78549455');
-  src: url('./dist/fontello-lonlat/fontello.eot?78549455#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?78549455') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?78549455') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?78549455') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?78549455#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?37686588');
+  src: url('./dist/fontello-lonlat/fontello.eot?37686588#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?37686588') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?37686588') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?37686588') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?37686588#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?78549455#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?37686588#fontello') format('svg');
   }
 }
 */
@@ -92,6 +92,8 @@
 .fe-clipboard-copy:before { content: '\e823'; } /* '' */
 .fe-target:before { content: '\e824'; } /* '' */
 .fe-isochrone:before { content: '\e825'; } /* '' */
+.fe-sidebar-collapse:before { content: '\e826'; } /* '' */
+.fe-sidebar-expand:before { content: '\e827'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-exchange:before { content: '\f0ec'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
