--- a/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
@@ -9,7 +9,12 @@
     max-width: 100%;
     pointer-events: auto;
     gap: .5rem;
-    padding: 0 .5rem .5rem .5rem;
+    // paddingTop : 2px for outline
+    padding: 2px .5rem .5rem .5rem;
+
+    .ll-modal-overlay {
+        z-index: auto;
+    }
 
     .separator {
         width: .25rem;
@@ -17,6 +22,7 @@
         margin: 1rem 0;
         background-color: var(--background-default);
         border-radius: 3px;
+        position: relative;
     }
 
     .filters {
@@ -27,19 +33,16 @@
         }
     }
 
-    .layer {
+    .ll-button.layer {
         width: calc(90px + .5rem);
         flex: 0 0 calc(90px + .5rem);
         border-radius: var(--border-radius-sm);
         display: flex;
         flex-direction: column;
-        box-shadow: var(--shadow);
         padding: .25rem .25rem 0;
         background-color: var(--background-default);
         position: relative;
-        cursor: pointer;
-        transition: .3s background-color ease;
-
+        color: var(--text-default);
 
         &.base {
             &:hover {
@@ -87,5 +90,6 @@
         text-align: center;
         max-height: 2.5rem;
         text-overflow: ellipsis;
+        line-height: 1.25rem;
     }
 }
