--- a/apps/front/src/TabsControl.scss
+++ b/apps/front/src/TabsControl.scss
@@ -15,13 +15,18 @@
 
     .expand-all {
         position: absolute;
-        top: 4px;
+        top: 0px;
         right: 100%;
 
         button {
-            padding: var(--space-2);
+            padding: 1.25rem;
             border-top-right-radius: 0;
             border-bottom-right-radius: 0;
+
+            @media (max-width: 700px) {
+                border-top-left-radius: 0;
+
+            }
         }
     }
 }
@@ -33,6 +38,10 @@
         .maplibregl-ctrl.maplibregl-ctrl-tabs {
             margin: 0;
             width: 100%;
+
+            &.distraction-free {
+                transform: translateX(100%);
+            }
         }
     }
 }
