--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?37686588');
-  src: url('./dist/fontello-lonlat/fontello.eot?37686588#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?37686588') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?37686588') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?37686588') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?37686588#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?91364713');
+  src: url('./dist/fontello-lonlat/fontello.eot?91364713#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?91364713') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?91364713') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?91364713') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?91364713#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?37686588#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?91364713#fontello') format('svg');
   }
 }
 */
@@ -95,6 +95,7 @@
 .fe-sidebar-collapse:before { content: '\e826'; } /* '' */
 .fe-sidebar-expand:before { content: '\e827'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
+.fe-menu:before { content: '\f0c9'; } /* '' */
 .fe-exchange:before { content: '\f0ec'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
 .fe-history:before { content: '\f1da'; } /* '' */
