--- a/packages/pentatrion-design/styles/base/_tailwind.scss
+++ b/packages/pentatrion-design/styles/base/_tailwind.scss
@@ -125,3 +125,11 @@ $sizes: 1, 2, 3, 4, 8;
 .origin-top-left {
     transform-origin: top left;
 }
+
+.align-right {
+    text-align: right;
+}
+
+.align-center {
+    text-align: center;
+}
