--- a/packages/pentatrion-design/components/dialog/Dialog.scss
+++ b/packages/pentatrion-design/components/dialog/Dialog.scss
@@ -195,7 +195,7 @@
             align-items: center;
             justify-content: center;
             outline: 2px solid var(--background-weak);
-            font-size: var(--font-size-sm);
+            font-size: var(--font-size-2xs);
             border-radius: 50%;
             margin: 0 .75rem 0 3px;
         }
@@ -229,7 +229,7 @@
                 height: 18px;
                 line-height: 10px;
                 color: var(--text-hint);
-                font-size: var(--font-size-xs);
+                font-size: var(--font-size-3xs);
             }
 
             .content {
@@ -237,13 +237,13 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                font-size: var(--font-size-rg);
+                font-size: var(--font-size-sm);
                 flex: 1;
             }
 
             .context {
                 color: var(--text-hint);
-                font-size: var(--font-size-sm);
+                font-size: var(--font-size-2xs);
             }
         }
     }
