--- a/packages/pentatrion-design/components/input/Input.scss
+++ b/packages/pentatrion-design/components/input/Input.scss
@@ -4,9 +4,12 @@
     border-radius: var(--border-radius-md);
     transition: all .3s ease;
     transition: outline-width 0s ease;
-    outline: solid 1px var(--color-weak-100);
+    outline: solid 1px transparent;
     display: flex;
 
+    &.variant-normal {
+        outline-color: var(--color-weak-100);
+    }
 
     &:hover {
         outline-color: var(--color-weak-400);
@@ -52,6 +55,7 @@
         border: 0;
         background: none;
         width: 0;
+        line-height: 1.25rem;
     }
 
     .adornment+.input-element {
