--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?91364713');
-  src: url('./dist/fontello-lonlat/fontello.eot?91364713#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?91364713') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?91364713') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?91364713') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?91364713#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?84702529');
+  src: url('./dist/fontello-lonlat/fontello.eot?84702529#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?84702529') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?84702529') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?84702529') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?84702529#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?91364713#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?84702529#fontello') format('svg');
   }
 }
 */
@@ -94,6 +94,8 @@
 .fe-isochrone:before { content: '\e825'; } /* '' */
 .fe-sidebar-collapse:before { content: '\e826'; } /* '' */
 .fe-sidebar-expand:before { content: '\e827'; } /* '' */
+.fe-stopwatch:before { content: '\e828'; } /* '' */
+.fe-ruler:before { content: '\e829'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-menu:before { content: '\f0c9'; } /* '' */
 .fe-exchange:before { content: '\f0ec'; } /* '' */
