--- a/packages/pentatrion-geo/src/components/geo-tabs/GeoTabs.scss
+++ b/packages/pentatrion-geo/src/components/geo-tabs/GeoTabs.scss
@@ -1,9 +1,4 @@
 .maplibregl-ctrl-tabs {
-    .tabs-content {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: .5rem;
-    }
 
     .search-selector {
         text-align: right;
@@ -14,30 +9,31 @@
         }
     }
 
-    .setting {
+    .property {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
-    .actions {
-        display: flex;
-        gap: .5rem;
-
-        &>* {
-
-            padding: .5rem 0;
-            flex: 1 1 0;
-            width: 0px;
-        }
-
-        i {
-            font-size: 1.5rem;
-        }
-    }
-
     .ll-textarea.raw {
         min-height: 15rem;
+    }
 
+    .constraints {
+        align-items: flex-start;
+
+        .ll-input-checkbox-container {
+            display: flex;
+
+            span {
+                margin-left: auto;
+                order: 1;
+                margin-right: 1rem;
+            }
+
+            input {
+                order: 2
+            }
+        }
     }
 }
