--- a/apps/front/src/css/ctrl/_layout.scss
+++ b/apps/front/src/css/ctrl/_layout.scss
@@ -30,7 +30,8 @@
 .maplibregl-ctrl {
     clear: both;
     pointer-events: auto;
-    transform: translate(0)
+    transform: translate(0);
+
 }
 
 .maplibregl-ctrl-top-left .maplibregl-ctrl {
