--- a/packages/pentatrion-design/components/button/Button.scss
+++ b/packages/pentatrion-design/components/button/Button.scss
@@ -149,4 +149,10 @@
     &.with-prefix {
         padding-left: .25rem;
     }
+
+    .ll-loader {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 }
