--- a/packages/pentatrion-design/components/tooltip/Tooltip.scss
+++ b/packages/pentatrion-design/components/tooltip/Tooltip.scss
@@ -3,5 +3,10 @@
 
     .ll-dialog {
         padding: .25rem .5rem;
+
+        &.description {
+            max-width: 300px;
+            font-size: var(--font-size-sm);
+        }
     }
 }
